--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,9 @@
+# MySQL Database
+spring.datasource.url=jdbc:mysql://localhost:3306/easeschool
+spring.datasource.username=springstudent
+spring.datasource.password=springstudent
 
-# H2 config
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+# Ensure Spring Boot uses schema.sql and data.sql
+
 server.port=8060
