--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.jpa.hibernate.ddl-auto=update
 # Ensure Spring Boot uses schema.sql and data.sql
 
 server.port=8060
+spring.jpa.properties.javax.persistence.validation.mode=none
