--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,11 @@
 # MySQL Database
-spring.datasource.url=jdbc:mysql://localhost:3306/easeschool
+#spring.datasource.url=jdbc:mysql://localhost:3306/easeschool
+#spring.datasource.username=springstudent
+#spring.datasource.password=springstudent
+spring.datasource.url=jdbc:mysql://easeschool.czw4y2e6adim.eu-north-1.rds.amazonaws.com/easyschool
 spring.datasource.username=springstudent
 spring.datasource.password=springstudent
+
 
 spring.jpa.hibernate.ddl-auto=update
 # Ensure Spring Boot uses schema.sql and data.sql
