--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 # MySQL Database
-#spring.datasource.url=jdbc:mysql://localhost:3306/easeschool
-#spring.datasource.username=springstudent
-#spring.datasource.password=springstudent
-spring.datasource.url=jdbc:mysql://easeschool.czw4y2e6adim.eu-north-1.rds.amazonaws.com/easyschool
+spring.datasource.url=jdbc:mysql://localhost:3306/easeschool
 spring.datasource.username=springstudent
 spring.datasource.password=springstudent
+#spring.datasource.url=jdbc:mysql:
+#spring.datasource.username=springstudent
+#spring.datasource.password=springstudent
 
 
 spring.jpa.hibernate.ddl-auto=update
@@ -12,3 +12,9 @@ spring.jpa.hibernate.ddl-auto=update
 
 server.port=8060
 spring.jpa.properties.javax.persistence.validation.mode=none
+
+easeschool.pagesize = 5
+easeschool.contact.pagesize=10
+
+spring.config.import=application_prod.properties,application_test.properties
+spring.profiles.active=prod
